@@ -1,10 +1,15 @@
+2005-01-19  Sam Steingold  <sds@gnu.org>
+
+	* eval.d (funcall_iclosure): when reserving space for variable
+	bindings, the actual size depends on varframe_binding_size
+
 2005-01-19  Arseny Slobodyuk  <ampy@users.sourceforge.net>
 
 	Fixed MSVC build
 	* makemake.in (cflags.h.stamp): simplified for nmake.
 	* win32.d: ssize_t defined for MICROSOFT.
-	* stream.d (listen_handle): don't declare variable in the middle of
-	a code block.
+	* stream.d (listen_handle): do not declare a variable in the
+	middle of a code block.
 	* utils/gctrigger.d (convert): the same.
 
 2005-01-02  Bruno Haible  <bruno@clisp.org>
